--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 Email: xmq@stu.ecnu.edu.cn <br /></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Mengqian Xu is a master student in Software Engineering Institute at <a href="https://www.ecnu.edu.cn/">ECNU</a> (East China Normal University), under the supervision of Prof. <a href="https://tingsu.github.io/">Ting Su</a>. Her research interests include but are not limited to software testing and software analysis. She obtained the B.Eng. degree from <a href="https://www.ahnu.edu.cn/">Anhui Normal University (ANU)</a> (2017-2021).
+<p>Mengqian Xu (许梦倩) is a master student in Software Engineering Institute at <a href="https://www.ecnu.edu.cn/">ECNU</a> (East China Normal University), under the supervision of Prof. <a href="https://tingsu.github.io/">Ting Su</a>. Her research interests include but are not limited to software testing and software analysis. She obtained the B.Eng. degree from <a href="https://www.ahnu.edu.cn/">Anhui Normal University (ANU)</a> (2017-2021).
 
 <h2>Publications </h2>
 <ol>
-<li><p>[ISSTA 2023] <em><strong>An Empirical Study of Functional Bugs in Android Apps</strong></em>[CCF-A]<br/> Yiheng Xiong, <b>Mengqian Xu</b> , Ting Su, Jingling Sun, Jue Wang, He Wen, Geguang Pu, Jifeng He, Zhendong Su<br /> [<a href="https://xyiheng.github.io//files/ISSTA_2023.pdf">pdf</a>], [<a href="https://github.com/Android-Functional-bugs-study/home">repo</a>]<font color="red"> ACM SIGSOFT Distinguished Paper Award </font></p></li>
+<li><p>[ISSTA 2023] <em><strong>An Empirical Study of Functional Bugs in Android Apps </strong></em>[CCF-A]<br/> Yiheng Xiong, <b>Mengqian Xu</b> , Ting Su, Jingling Sun, Jue Wang, He Wen, Geguang Pu, Jifeng He, Zhendong Su<br /> [<a href="https://xyiheng.github.io//files/ISSTA_2023.pdf">pdf</a>], [<a href="https://github.com/Android-Functional-bugs-study/home">repo</a>]<font color="red"> ACM SIGSOFT Distinguished Paper Award </font></p></li>
 </ol>
 <h2>Internship Experience</h2>
 <ul>
