--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 Email: xmq@stu.ecnu.edu.cn <br /></p>
 </td></tr></table>
 <h2>About me</h2>
-<p>Mengqian Xu (许梦倩) is a master student in Software Engineering Institute at <a href="https://www.ecnu.edu.cn/">ECNU</a> (East China Normal University), under the supervision of Prof. <a href="https://tingsu.github.io/">Ting Su</a>. Her research interests include but are not limited to software testing and software analysis. She obtained the B.Eng. degree from <a href="https://www.ahnu.edu.cn/">Anhui Normal University (ANU)</a> (2017-2021).
+<p>Mengqian Xu (许梦倩) is a master student in Software Engineering Institute at <a href="https://www.ecnu.edu.cn/">ECNU</a> (East China Normal University), under the supervision of Prof. <a href="https://tingsu.github.io/">Ting Su</a>. Her research interests include but are not limited to software testing and software analysis. She obtained the B.Eng. degree from <a href="https://www.ahnu.edu.cn/">ANU</a> (Anhui Normal University) (2017-2021).
 
 <h2>Publications </h2>
 <ol>
