--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ Email: xmq@stu.ecnu.edu.cn <br /></p>
 <h2>Honor & Award </h2>
 <ol>
 <li><p>Outstanding Graduate Award, Anhui, 2021.</p></li>
-<li>OutStanding Graduate Thesis,Anhui,2021.</li>
+<li><p>>OutStanding Graduate Thesis, Anhui, 2021.</p</li>
 </ol>
 </div>
 </body>
